RESOLVED FIXED202122
Lazy JSGlobalObject property materialization should not use putDirectWithoutTransition.
https://bugs.webkit.org/show_bug.cgi?id=202122
Summary Lazy JSGlobalObject property materialization should not use putDirectWithoutT...
Mark Lam
Reported 2019-09-23 16:17:04 PDT
Attachments
proposed patch. (3.51 KB, patch)
2019-09-23 16:23 PDT, Mark Lam
ysuzuki: review+
Mark Lam
Comment 1 2019-09-23 16:23:07 PDT
Created attachment 379403 [details] proposed patch.
Yusuke Suzuki
Comment 2 2019-09-23 16:24:50 PDT
Comment on attachment 379403 [details] proposed patch. r=me
Mark Lam
Comment 3 2019-09-23 16:29:40 PDT
Thanks for the review. I'm going to replace "initialization" with "materialization" in my test name and ChangeLog comments because I think it's a more accurate description.
Mark Lam
Comment 4 2019-09-23 16:34:04 PDT
Radar WebKit Bug Importer
Comment 5 2019-09-23 16:34:48 PDT
Mark Lam
Comment 6 2019-09-23 17:40:15 PDT
Tadeu Zagallo
Comment 7 2019-09-26 11:09:08 PDT
*** Bug 202150 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.