Lazy JSGlobalObject property materialization should not use putDirectWithoutTransition. https://bugs.webkit.org/show_bug.cgi?id=202122 <rdar://problem/55535249>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/lazy-global-object-property-materialization-should-not-putDirectWithoutTransition.js: Added.

Source/JavaScriptCore:

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):



Canonical link: https://commits.webkit.org/215728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250264 268f45cc-cd09-0410-ab3c-d52691b4dbfc